no seriously i promise this time i actually fixed the text wrap issue.

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -48,6 +48,10 @@
     flex-wrap: wrap;
 }
 
+.textwrap {
+    text-wrap: wrap;
+}
+
 .Headerstyling {
     text-align: center;
     font-size: 330%;
